--- a/build.xml
+++ b/build.xml
@@ -75,4 +75,8 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target name="-post-jar">
+      <property name="version.num" value="0.1" />
+      <copy file="${dist.jar}" tofile="${dist.dir}/matchbook-${version.num}.jar" />
+    </target>
 </project>
